provide way to disable searching java sources and use JAVA_HOME to search javac